--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "console.table": "^0.4.0",
     "debug": "^2.2.0",
-    "lodash": "~3.8.0",
-    "minimist": "~1.1.1"
+    "lodash": "^3.8.0",
+    "minimist": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^0.21.2"
