--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mocha": "^5.0.0"
   },
   "engines": {
-    "node": ">=5.0"
+    "node": ">=8",
+    "npm": ">=5"
   },
   "homepage": "https://github.com/guyellis/packcomp#readme",
   "keywords": [
@@ -43,5 +44,5 @@
     "lint": "node_modules/.bin/eslint .",
     "test": "node_modules/.bin/mocha --recursive"
   },
-  "version": "0.0.5"
+  "version": "1.0.0"
 }
