--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "url": "https://github.com/guyellis/packcomp/issues"
   },
   "dependencies": {
-    "console.table": "^0.10.0",
-    "debug": "^3.1.0",
-    "lodash": "^4.0.0",
-    "minimist": "^1.1.1"
+    "console.table": "0.10.0",
+    "debug": "3.1.0",
+    "lodash": "4.17.10",
+    "minimist": "1.2.0"
   },
   "description": "Compare Dependencies in two or more package.json files",
   "devDependencies": {
-    "eslint": "^4.8.0",
+    "eslint": "4.8.0",
     "eslint-config-guyellis": "0.0.6",
-    "mocha": "^5.0.0"
+    "jest": "23.1.0"
   },
   "engines": {
     "node": ">=8",
