--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "description": "Compare Dependencies in two or more package.json files",
   "devDependencies": {
-    "eslint": "4.8.0",
-    "eslint-config-guyellis": "0.0.6",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-jest": "21.17.0",
     "jest": "23.1.0"
   },
   "engines": {
@@ -41,8 +43,10 @@
     "url": "git+https://github.com/guyellis/packcomp.git"
   },
   "scripts": {
-    "lint": "node_modules/.bin/eslint .",
-    "test": "node_modules/.bin/mocha --recursive"
+    "coverage": "jest --coverage",
+    "lint": "eslint --ext .js . --max-warnings 0",
+    "lintfix": "eslint --ext .js . --fix",
+    "test": "jest"
   },
   "version": "1.0.0"
 }
