--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "console.table": "0.10.0",
     "debug": "3.1.0",
     "lodash": "4.17.10",
-    "minimist": "1.2.0"
+    "minimist": "1.2.0",
+    "node-fetch": "2.1.2"
   },
   "description": "Compare Dependencies in two or more package.json files",
   "devDependencies": {
