--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "public": true,
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
